--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ header{
 }
 header .menu{
     justify-content: space-between;
+    padding: 0 20px;
     color: #fff;
 }
 header .list-items{
@@ -46,33 +47,40 @@ footer{
 }
 .flex-container{
     display: flex;
-    max-width: 992px;
+    /* max-width: 992px; */
     margin: auto;
     width: 100%;
-    padding: 5px;
+    padding: 5px 20px;
+    justify-content: space-around;
 }
 .apresentacao{
     display: flex;
     height: 100vh; /* O vh corresponde ao 1% do viewport, que é referente a altura da tela do dispositivo */
     align-items: center;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    padding: 0 20px;
+    /* border: #db2525 1px solid; */
 }
 .apresentacao .texto-apresentacao{
     min-height: 200px;
+    /* width: 100%; */
+    /* border: #122a57 1px solid; */
 }
 .apresentacao .texto-apresentacao h1{
     color: #122a57;
-    font-size: 48px;
+    font-size: 52px;
     margin-bottom: 10px;
 }
 .apresentacao .texto-apresentacao p{
     margin-bottom: 20px;
+    font-size: 20px;
 }
 .apresentacao .texto-apresentacao a{
     background-color: #122a57;
     color: #fff;
     text-decoration: none;
     text-align: center;
+    font-size: 18px;
     border-radius: 30px;
     padding: 10px 0;
     width: 220px; 
@@ -116,12 +124,13 @@ footer{
     color: #fff;
 }
 .container-externo h2{
-    font-size: 32px;
-    margin-bottom: 50px;
+    font-size: 40px;
+    margin-bottom: 70px;
+    margin-left: 150px;
 }
 .list-servicos{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 .list-servicos .item-servico{
     display:flex;
@@ -131,7 +140,7 @@ footer{
 }
 .list-servicos .item-servico a{
     text-decoration: none;
-    font-size: 16px;
+    font-size: 18px;
     font-weight:700;
     margin-top: 20px;
     width: 120px;
@@ -142,15 +151,16 @@ footer{
     padding: 5px 10px;
     color: #122a57;
     background-color: #fff;
+    margin-bottom: 20px;
 }
 .list-servicos .item-servico p{
     color: #fff;
     margin-top: 10px;
     font-weight: 700;
-    font-size: 18px;
+    font-size: 24px;
 }
 .list-servicos .item-servico img{
-    width: 75%;
+    width: 100%;
     margin: auto;
 }
 #planos{
@@ -196,4 +206,64 @@ footer{
     height: 30px;
     display: block;
     margin-top: 15px;
+}
+/* Mobile */
+@media(max-width:900px){
+    .flex-container{
+        flex-direction: column;
+        width: 100%;
+    }
+    .apresentacao{
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        flex: 1;
+    }
+    .texto-apresentacao{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+    .apresentacao .texto-apresentacao h1{
+        text-align: center;
+    }
+    .list-servicos{
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+    }
+    #quem-somos{
+        display: flex;
+        flex-direction: column-reverse;
+        align-content: center;
+    }
+    .list-servicos .item-servico a{
+        margin-bottom: 50px;
+    }
+    .list-servicos .item-servico img{
+        width: 70%;
+        margin: auto;
+    }
+    .container-externo h2,#planos h2{
+        display: flex;
+        justify-content: center;
+        margin-left: 0;
+        margin-right: 0;
+        margin-bottom: 60px;
+    }
+    #planos .list-planos{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-left: 0;
+        margin-right: 0;
+    }
+    .list-planos .item-plano{
+        flex-grow: 2;
+    }
+    footer{
+        display: flex;
+        flex-direction: column;
+    }
 }
